Added API independance

--- a/Project2/CMakeLists.txt
+++ b/Project2/CMakeLists.txt
@@ -6,8 +6,16 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/${PROJECT_NAME}.${CMA
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/${PROJECT_NAME}.${CMAKE_BUILD_TYPE})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${PROJECT_NAME}.${CMAKE_BUILD_TYPE})
 
+file(GLOB Renderer "src/Renderer/*.cpp" "src/Renderer/*.h")
+file(GLOB OpenGLRenderer "src/OpenGLRenderer/*.cpp" "src/OpenGLRenderer/*.h")
 
-add_executable(Project2 "src/Main.cpp" "src/Main.h" "../vendor/Glad/src/glad.c")
+add_executable(Project2
+	src/Main.cpp
+	src/Main.h
+	../vendor/Glad/src/glad.c
+	${Renderer}
+	${OpenGLRenderer}
+)
 
 target_link_libraries(Project2
 	PRIVATE glad
@@ -15,6 +23,8 @@ target_link_libraries(Project2
 	PRIVATE ${OPENGL_LIBRARIES}
 	PRIVATE ${GLFW_LIBRARIES}
 )
+
+target_include_directories(Project2 PRIVATE ./src)
 
 add_custom_command(
 	TARGET Project2 PRE_BUILD
