Shifted glad to window creation. Added preprocessor definition for OpenGL. True cross API

--- a/Project2/CMakeLists.txt
+++ b/Project2/CMakeLists.txt
@@ -30,3 +30,5 @@ add_custom_command(
 	TARGET Project2 PRE_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
     ${PROJECT_SOURCE_DIR}/assets/ $<TARGET_FILE_DIR:Project2>/assets)
+
+add_compile_definitions(API_OPENGL)
